[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = { version="4", features = ["openssl"] }
actix-web-actors = "4.2.0"
awc = "3.1.1"
env_logger = "0.10"
openssl = "0.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

